ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-service-ingress
  namespace: monitoring # Agar aap monitoring namespace use kar rahe hain, warna ise hata dein
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: micro-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: car-service # Ye aapke service.yaml ke 'name' se match hona chahiye
            port:
              number: 80
